# car_price_prediction

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/car_price_prediction/: __init__.py
tests/: test_car_price_prediction.py
